--- a/assets/styles/css/user.less
+++ b/assets/styles/css/user.less
@@ -49,6 +49,7 @@
 }
 #user-profile-info-left {
   .user-avartar-container {
+    padding: 0px;
     display: inline-block;
   }
   height: 100%;
@@ -185,7 +186,12 @@ div#user-authenticate-container {
   .signup-header {
     height: 30px;
   }
-
+  .alert-warning {
+    clear: both;
+    margin-bottom: 10px;
+    padding: 7px;
+    font-size: 13px;
+  }
   .signup-container {
     width: 300px;
     margin: 0px auto;
@@ -203,7 +209,7 @@ div#user-authenticate-container {
     width: 48%;
   }
   .signup-item {
-    height: 65px;
+    min-height: 65px;
   }
   .signup-label {
     font-size: 13px;
